--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -11,11 +11,11 @@
 
 
     <MudStack Row=true>
-        <div>
+        <MudText>
             Templates
 
-        </div>
-        
+        </MudText>
+
         <MudSelectList T="string"
                        Label="Category"
                        Values="TemplateCategories"
@@ -26,29 +26,30 @@
                        Values="@Templates"
                        Value="@SelectedTemplate"
                        ValueChanged="@((selected)=>{
-SelectedTemplate = selected;
-Nav.NavigateTo("/templates/"+selected.Id);
-})" />
-        @if (Templates?.Count() > 0)
-        {
-            <MudButton Color=Color.Tertiary OnClick="@(()=>{
-SelectedTemplate = new();
-})" StartIcon="@Icons.Material.Filled.AddCard" />
+                                        SelectedTemplate = selected;
+                                        Nav.NavigateTo("/templates/"+selected.Id);
+                                        })" />
 
-        }
-        else
-        {
-            <MudTooltip Arrow=true IsVisible=@(Templates?.Count()<1) Text="Create your first template">
+        <MudTooltip Color=Color.Error
+                    ShowOnHover=@(Templates?.Count() < 1)
+                    Arrow=true
+                    IsVisible=@(createFirstTemplateTooltipVisible)
+                    Text="Create your first template">
 
-                <MudButton Color=Color.Tertiary OnClick="@(()=>{SelectedTemplate = new();Nav.NavigateTo("/templates");})" StartIcon="@Icons.Material.Filled.AddCard" />
+            <MudIconButton Color=Color.Tertiary
+                           Class="align-middle"
+                           OnClick="@(()=>{SelectedTemplate = new();Nav.NavigateTo("/templates");})"
+                           Icon="@Icons.Material.Filled.AddCard" />
 
-            </MudTooltip>
+        </MudTooltip>
 
-        }
+
 
         @if (SelectedCategory != null && SelectedCategory != "All")
         {
-            <MudButton OnClick=@(()=>{RenameModal.Show();}) Color="Color.Tertiary" StartIcon="@Icons.Material.Filled.ChangeCircle" />
+            <MudButton OnClick=@(()=>{RenameModal.Show();})
+                   Color="Color.Tertiary"
+                   StartIcon="@Icons.Material.Filled.ChangeCircle" />
         }
         @if (SelectedTemplate != null)
         {
@@ -69,7 +70,6 @@ SelectedTemplate = new();
 </SetHeader>
 @if (SelectedTemplate != null)
 {
-    <MudText>Test</MudText>
     <EditDirectoryTemplate DirectoryTemplate=@SelectedTemplate />
 }
 
@@ -77,15 +77,13 @@ SelectedTemplate = new();
 
 
 @code {
-
-
+    bool createFirstTemplateTooltipVisible;
     AppModal? RenameModal;
     string? newCategoryName;
     protected async Task DuplicateTemplate(DirectoryTemplate template)
     {
         SelectedTemplate = (DirectoryTemplate)template.Clone();
-        await InvokeAsync(StateHasChanged);
-        Header?.OnRefreshRequested?.Invoke();
+        await RefreshComponents();
 
 
     }
@@ -104,6 +102,22 @@ SelectedTemplate = new();
         SelectedCategory = newCategoryName;
         await FetchTemplates();
         RenameModal?.Hide();
-        await InvokeAsync(StateHasChanged);
+        await RefreshComponents();
+
+    }
+    protected override async Task OnInitializedAsync()
+    {
+        await base.OnInitializedAsync();
+        await RefreshComponents();
+        if (Templates?.Count() < 1)
+        {
+
+            await Task.Delay(1000);
+            createFirstTemplateTooltipVisible = true;
+            await RefreshComponents();
+
+
+
+        }
     }
 }
