--- a/BLAZAMGui/Layouts/AppUserButton.razor
+++ b/BLAZAMGui/Layouts/AppUserButton.razor
@@ -23,7 +23,7 @@
         <MudText Typo=Typo.caption Class="my-1" Style="text-align:center">
             @CurrentUser.Username
         </MudText>
-        @if (UserState.Notifications.Count > 0)
+        @if (UserState.Notifications?.Count > 0)
         {
             <MudMenuItem OnClick="@(()=>{NotificationsOpen=!NotificationsOpen;})">Notifications</MudMenuItem>
         }
