--- a/BLAZAMGui/UI/OU/OUTreeView.razor
+++ b/BLAZAMGui/UI/OU/OUTreeView.razor
@@ -20,7 +20,7 @@
                          Text="@context.CanonicalName"
                          Icon="@Icons.Material.Filled.Folder"
                          Class="minw-max w-100"
-                         CanExpand=context.HasChildren()
+                         CanExpand=context.HasChildren
                          EndText="@EndText?.Invoke(context)">
             @*<Content>
             @{
