--- a/BLAZAMGui/UI/Settings/ManualApplicationUpdater.razor
+++ b/BLAZAMGui/UI/Settings/ManualApplicationUpdater.razor
@@ -17,7 +17,7 @@
     <MudAlert Class="mud-alert-filled-info">
         <MudText Typo="Typo.h6">@AppLocalization["Update Scheduled"]</MudText>
         <MudText>
-            The application will be updated to version @AutoUpdateService.ScheduledUpdate.Version at @AutoUpdateService.ScheduledUpdateTime
+            The application will be updated to version @AutoUpdateService.ScheduledUpdate?.Version at @AutoUpdateService.ScheduledUpdateTime
         </MudText>
     </MudAlert>
 }
