--- a/BLAZAMGui/UI/Chat/AppChat.razor
+++ b/BLAZAMGui/UI/Chat/AppChat.razor
@@ -4,50 +4,76 @@
 <Audio Src="/audio/messagePop.mp3" @bind-Playing=@playingPop />
 <Audio Src="/audio/bell.wav" @bind-Playing=@playingBell />
 
-<ChatButton ChatRoom=AppChatRoom OnClick="@(()=>{_chatOpen=!_chatOpen;})" />
+<ChatButton Class="pa-0 mud-height-full" ChatRoom=AppChatRoom OnClick="@(()=>{_chatOpen=!_chatOpen;})" />
 
-@if (Viewers.ContainsKey(ChatUri))
-{
-    var otherViewers = Viewers[ChatUri].Where(us => !us.Equals(currentUserState));
-}
 
-<MudPopover Style="width:356px;min-height:450px;"
+
+<MudPopover Style="min-width:300px;min-height:450px;"
             Open="@_chatOpen"
             Fixed="true"
             Square=true
             AnchorOrigin="Origin.TopRight"
             TransformOrigin="Origin.BottomRight"
-            Class="overflow-hidden">
-    <MudToolBar Class="mud-theme-dark">
-        @if (selectedChatRoom == AppChatRoom)
-        {
-            <MudText>App Chat</MudText>
-        }
-        else
-        {
-            
-                var otherMembers = selectedChatRoom.Members.Where(m=>!m.Equals(currentUserState.Preferences)).Select(m=>m.Username).ToList();
-                string chatName = String.Join(", ", otherMembers);
-            
-            <MudText>@selectedChatRoom.Name</MudText>
-            <MudText Typo="Typo.caption"> Other Members: @chatName</MudText>
-        }
-    </MudToolBar>
+            Class="overflow-hidden mb-3">
+
     <MudDrawer @bind-Open="@_drawerOpen"
                Anchor="Anchor.Right"
+               PreserveOpenState=true
                Elevation="1"
-               ClipMode="DrawerClipMode.Docked"
+               ClipMode="DrawerClipMode.Never"
                Style="--mud-drawer-width-right: 150px;"
                Variant="@DrawerVariant.Mini">
 
         <MudNavMenu>
-            <MudNavLink OnClick="@(()=>{selectedChatRoom=AppChatRoom;})" Icon="@Icons.Material.Filled.AllInclusive">App Chat</MudNavLink>
-            <MudNavLink Icon="@Icons.Material.Filled.FileOpen">Page Chat</MudNavLink>
-            <MudNavLink Icon="@Icons.Material.Filled.EnhancedEncryption">Private Chats</MudNavLink>
+            <MudToggleIconButton Icon="@Icons.Material.Filled.MenuOpen"
+                                 ToggledIcon="@Icons.Material.Filled.Menu"
+                                 @bind-Toggled=@_drawerOpen>
+                Menu
+            </MudToggleIconButton>
+
+            <MudNavLink OnClick="@(()=>{SwitchTo(AppChatRoom);})"
+                        Icon="@Icons.Material.Filled.AllInclusive">
+                App Chat
+            </MudNavLink>
+            @{
+                int unreadMessageCount = Chat.GetUnreadMessages(currentUserState.Preferences).Count();
+            }
+            <MudBadge Visible=@((!_chatsExpanded||!_drawerOpen)&& unreadMessageCount>0)
+                      Class="mud-width-full"
+                      Overlap=true
+                      BadgeClass="left-0"
+                      Origin="Origin.TopLeft"
+                      Max="99"
+                      Content="unreadMessageCount"
+                      Color="Color.Error">
+
+                <MudNavGroup Icon="@Icons.Material.Filled.EnhancedEncryption"
+                             Title="Private Chats"
+                             Expanded=@(_chatsExpanded && _drawerOpen)
+                             ExpandedChanged=@ChangeChatExpanded>
+
+                    @foreach (var chatRoom in PrivateChatRooms)
+                    {
+                        int unreadRoomMessageCount = Chat.GetUnreadMessages(currentUserState.Preferences, chatRoom).Count();
+                        <MudBadge Class="ms-4"
+                              Overlap=true
+                              Visible=@(unreadMessageCount>0)
+                              Origin=Origin.CenterLeft
+                              Max="99"
+                              Content="unreadRoomMessageCount"
+                              Color="Color.Error">
+                            <MudNavLink OnClick="@(()=>{SwitchTo(chatRoom);})">@chatRoom.Name</MudNavLink>
+                        </MudBadge>
+
+                    }
+                </MudNavGroup>
+
+            </MudBadge>
+
             <MudNavGroup Icon="@Icons.Material.Filled.Group"
                          Title="Users"
                          Class="mb-16"
-                         Expanded=_usersExpanded
+                         Expanded=@(_usersExpanded && _drawerOpen)
                          ExpandedChanged=@ChangeUsersExpanded>
                 @{
                     var onlineUsers = UserStateService.UserStates.Where(u => u.Ticket?.Properties.ExpiresUtc > DateTime.UtcNow && !u.Equals(currentUserState)).ToList();
@@ -61,25 +87,49 @@
                     }
                 </MudNavGroup>
 
-                <MudNavGroup Title="Offline" Expanded=true>
-
-                    @foreach (var user in Context.UserSettings.Where(u => !onlineUsers.Select(us => us.Preferences).Contains(u) && !u.Equals(currentUserState.Preferences)))
+                <MudNavGroup Title="Offline">
+                    @if (Context != null)
                     {
-                        <MudNavLink OnClick="@(async ()=>{await OpenPrivateChat(user);})">@user.Username</MudNavLink>
+                        @foreach (var user in Context.UserSettings.Where(u => !onlineUsers.Select(us => us.Preferences).Contains(u) && !u.Equals(currentUserState.Preferences)))
+                        {
+                            <MudNavLink OnClick="@(async ()=>{await OpenPrivateChat(user);})">@user.Username</MudNavLink>
+                        }
                     }
                 </MudNavGroup>
 
             </MudNavGroup>
-            <MudNavLink OnClick="@(()=>{Chat.DeleteAllChatRooms();})" Icon="@Icons.Material.Filled.Clear">Delete All Chat Rooms</MudNavLink>
+            @if (ApplicationInfo.InDebugMode && CurrentUser.State.IsSuperAdmin)
+            {
+                <MudNavLink OnClick="@(()=>{Chat.DeleteAllChatRooms();})" Icon="@Icons.Material.Filled.Clear">Delete All Chat Rooms</MudNavLink>
+            }
         </MudNavMenu>
     </MudDrawer>
+
+
+
+
+    <MudToolBar Class="mud-width-full mud-theme-dark">
+        @if (selectedChatRoom == AppChatRoom)
+        {
+            <MudText>App Chat</MudText>
+        }
+        else
+        {
+
+            var otherMembers = selectedChatRoom.Members.Where(m => !m.Equals(currentUserState.Preferences)).Select(m => m.Username).ToList();
+            string chatName = String.Join(", ", otherMembers);
+
+            <MudText>@selectedChatRoom.Name</MudText>
+            <MudText Typo="Typo.caption"> Other Members: @chatName</MudText>
+        }
+
+    </MudToolBar>
 
     <AppChatRoom Class="pr-16"
                  OnCloseClicked=@(()=>{_chatOpen=!_chatOpen;})
                  ChatRoom="selectedChatRoom" />
 
 
-    <MudButton Variant="Variant.Text" OnClick="@ToggleDrawer">Chats</MudButton>
 
 </MudPopover>
 
@@ -87,8 +137,11 @@
 
     bool _chatOpen;
     bool _usersExpanded;
+    bool _chatsExpanded;
     bool _drawerOpen;
     ChatRoom? selectedChatRoom;
+
+    public List<ChatRoom> PrivateChatRooms { get; set; }
 
 
     [Parameter]
@@ -99,14 +152,6 @@
     public bool AlwaysShowPageViewersButton { get; set; }
     IApplicationUserState currentUserState;
 
-    /// <summary>
-    /// A single system wide singleton static dictionary of every
-    /// viewer on every page this component is placed
-    /// </summary>
-    static Dictionary<string, List<IApplicationUserState>> Viewers = new Dictionary<string, List<IApplicationUserState>>();
-
-    delegate void CallbackEvent();
-    static CallbackEvent ViewersChanged;
 
 
     bool playingPop;
@@ -119,43 +164,33 @@
 
         await base.OnInitializedAsync();
 
+        currentUserState = CurrentUser.State;
 
         if (ChatUri.IsNullOrEmpty())
         {
 
 
             ChatUri = Nav.ToBaseRelativePath(Nav.Uri);
-            Nav.LocationChanged += ((state, args) =>
-          {
-              if (Nav.ToBaseRelativePath(args.Location) != ChatUri)
-              {
-                  RemoveThisViewer();
-              }
-          });
+
         }
 
 
         await RefreshChatRooms();
+        PrivateChatRooms = Chat.GetPrivateChats(CurrentUser.State.Preferences);
+
+
+
+
         selectedChatRoom = AppChatRoom;
-        //Setup other viewers button listeners
-        ViewersChanged += (async () =>
-       {
-           //await RefreshChatRooms();
-
-           await InvokeAsync(StateHasChanged);
-
-       });
-        currentUserState = CurrentUser.State;
-        AddThisViewer();
-
-
 
 
         //Setup chat message listeners
 
         Chat.OnMessagePosted += ((ChatMessage message) =>
        {
-           if (message.User != currentUserState.Preferences)
+           if (message.User != currentUserState.Preferences
+               && (message.ChatRoomId == AppChatRoom?.Id
+                   || PrivateChatRooms.Any(pcr => pcr.Id == message.ChatRoomId)))
            {
                if (_chatOpen && !playingPop)
                {
@@ -172,50 +207,65 @@
        });
 
 
+        Chat.OnChatRoomCreated += (async (room) =>
+
+        {
+            if (room.Members.Any(m => m.Id == currentUserState.Id))
+            {
+                await RefreshChatRooms();
+                await InvokeAsync(StateHasChanged);
+            }
+        });
+
+
+    }
+    void SwitchTo(ChatRoom room)
+    {
+        selectedChatRoom = room;
+
+        _drawerOpen = false;
+
     }
     async Task OpenPrivateChat(AppUser otherParty)
     {
-        var chat = Chat.GetPrivateTwoWayChat(new() { currentUserState.Preferences, otherParty });
-        selectedChatRoom = chat;
+        var chat = Chat.GetPrivateTwoWayChat(currentUserState.Preferences, otherParty);
+        SwitchTo(chat);
     }
+    /// <summary>
+    /// Changes the expanded stat of the users dropdown
+    /// </summary>
+    /// <remarks>
+    /// Opens the drawer when clicked in min drawer
+    /// </remarks>
+    /// <param name="state"></param>
     void ChangeUsersExpanded(bool state)
     {
-        _usersExpanded = state;
+        if (_drawerOpen || state)
+            _usersExpanded = state;
+        if (state) _drawerOpen = true;
+
+    }
+    /// <summary>
+    /// Changes the expanded stat of the chats dropdown
+    /// </summary>
+    /// <remarks>
+    /// Opens the drawer when clicked in min drawer
+    /// </remarks>
+    /// <param name="state"></param>
+    void ChangeChatExpanded(bool state)
+    {
+        if (_drawerOpen || state)
+            _chatsExpanded = state;
         if (state) _drawerOpen = true;
 
     }
 
-    void ToggleDrawer()
-    {
-        _drawerOpen = !_drawerOpen;
-        if (!_drawerOpen) _usersExpanded = false;
+    //void ToggleDrawer()
+    //{
+    //    _drawerOpen = !_drawerOpen;
 
-    }
-
-    private void AddThisViewer()
-    {
-        if (!Viewers.ContainsKey(ChatUri))
-            Viewers.Add(ChatUri, new());
-
-        if (!Viewers[ChatUri].Contains(currentUserState))
-        {
-            Viewers[ChatUri].Add(currentUserState);
-            ViewersChanged?.Invoke();
-        }
-    }
+    //}
 
 
-    private void RemoveThisViewer()
-    {
-        if (!Viewers.ContainsKey(ChatUri))
-            return;
-
-        if (Viewers[ChatUri].Contains(currentUserState))
-        {
-            Viewers[ChatUri].Remove(currentUserState);
-            ViewersChanged.Invoke();
-
-        }
-    }
 
 }
