--- a/BLAZAMGui/UI/Dashboard/CurrentUserDashboardWidgets.razor
+++ b/BLAZAMGui/UI/Dashboard/CurrentUserDashboardWidgets.razor
@@ -10,7 +10,7 @@
     <ChildContent>
         @foreach (var widget in allWidgets)
         {
-            @if (!usersWidgets.Any(w => w.WidgetType == widget.WidgetType))
+            @if (!CurrentUser.State?.Preferences?.DashboardWidgets.Any(w => w.WidgetType == widget.WidgetType)==true)
             {
                 <MudMenuItem OnClick="@(async()=>{await AddWidget(widget.WidgetType);})">@widget.Title</MudMenuItem>
             }
@@ -18,7 +18,7 @@
     </ChildContent>
 </MudMenu>
 <MudDropContainer @ref=widgetContainer
-                  T="UserDashboardWidget" Items="usersWidgets"
+                  T="UserDashboardWidget" Items="CurrentUser.State?.Preferences?.DashboardWidgets.OrderBy(uw => uw.Slot).ThenBy(uw => uw.Order)"
                   ItemsSelector="ItemSelector"
                   ItemDropped="ItemDropped"
                   Class="d-flex flex-wrap flex-grow-1 mud-width-full ">
@@ -56,7 +56,8 @@
         <MudCard Class="my-5 " Elevation="1">
             <MudCardHeader>
                 <MudText Typo="Typo.h6"> @widget.Title</MudText>
-                <AppCloseButton OnClick=@(async()=>{await RemoveWidget(context);}) Style="right:10px;top:15px; position:absolute;" />
+                <MudSpacer/>
+                <AppCloseButton OnClick=@(async()=>{await RemoveWidget(context);})  />
 
             </MudCardHeader>
 
@@ -77,7 +78,6 @@
 
     MudDropContainer<UserDashboardWidget>? widgetContainer;
     List<Widget> allWidgets = new List<Widget>();
-    List<UserDashboardWidget> usersWidgets => CurrentUser.State?.Preferences?.DashboardWidgets;
 
     protected override Task OnInitializedAsync()
     {
@@ -89,24 +89,43 @@
     {
         return item.Slot == dropzone;
     }
+
     private Task ItemDropped(MudItemDropInfo<UserDashboardWidget> dropItem)
     {
         if (dropItem.Item == null) return Task.CompletedTask;
-        dropItem.Item.Slot = dropItem.DropzoneIdentifier;
-        StateHasChanged();
-        CurrentUser.State.SaveUserSettings();
+        var refItem = CurrentUser.State?.Preferences?.DashboardWidgets.Where(w => w.WidgetType == dropItem.Item.WidgetType).FirstOrDefault();
 
-        widgetContainer?.Refresh();
+        refItem.Slot = dropItem.DropzoneIdentifier;
+        refItem.Order = dropItem.IndexInZone;
+
+        foreach (var widget in CurrentUser.State.Preferences.DashboardWidgets)
+        {
+            if (widget.Slot == dropItem.DropzoneIdentifier && widget.Order >= dropItem.IndexInZone)
+            {
+                widget.Order++;
+            }
+        }
+     
+        CurrentUser.State.SaveUserSettings();
         return Task.CompletedTask;
     }
+
+    //private Task ItemDropped(MudItemDropInfo<UserDashboardWidget> dropItem)
+    //{
+    //    if (dropItem.Item == null) return Task.CompletedTask;
+    //    dropItem.Item.Slot = dropItem.DropzoneIdentifier;
+    //    dropItem.Item.Order = dropItem.IndexInZone;
+    //    CurrentUser.State.SaveUserSettings();
+    //    return Task.CompletedTask;
+    //}
     async Task AddWidget(DashboardWidgetType widgetType)
     {
         var order = 0;
-        if (usersWidgets.Count > 0)
+        if (CurrentUser.State?.Preferences?.DashboardWidgets.Count > 0)
         {
-            order = usersWidgets.Max(w => w.Order) + 1;
+            order = CurrentUser.State.Preferences.DashboardWidgets.Max(w => w.Order) + 1;
         }
-        usersWidgets.Add(new UserDashboardWidget
+        CurrentUser.State?.Preferences?.DashboardWidgets.Add(new UserDashboardWidget
             {
                 Id = 0,
                 User = CurrentUser.State.Preferences,
@@ -121,7 +140,7 @@
     }
     async Task RemoveWidget(UserDashboardWidget widget)
     {
-        usersWidgets.Remove(widget);
+        CurrentUser.State?.Preferences?.DashboardWidgets.Remove(widget);
         CurrentUser.State.SaveUserSettings();
 
         await InvokeAsync(StateHasChanged);
