--- a/BLAZAMGui/UI/Dashboard/Widgets/NewEntriesWidgetDataGrid.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/NewEntriesWidgetDataGrid.razor
@@ -18,14 +18,14 @@
     <Columns>
         <TemplateColumn Title="Name">
             <CellTemplate>
-                <MudTooltip Text="@context.Item.OU.ToPrettyOu()">
+                <MudTooltip Text="@context.Item?.OU.ToPrettyOu()">
                     <MudText>@context.Item.CanonicalName</MudText>
                 </MudTooltip>
             </CellTemplate>
         </TemplateColumn>
         <TemplateColumn Title="Created">
             <CellTemplate>
-                @if (context.Item.Created != null)
+                @if (context.Item?.Created != null)
                 {
                     <MudText>@context.Item.Created.Value.ToLocalTime()</MudText>
                 }
