--- a/BLAZAMGui/UI/Settings/Permissions/AccessLevelEditor.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/AccessLevelEditor.razor
@@ -1,28 +1,28 @@
 @inherits AppComponentBase
 
-<MudText Typo ="Typo.h6" Size="HeadingSize.Is3">
+<MudText Typo="Typo.h6" Size="HeadingSize.Is3">
     @AppLocalization["Access Levels"]
 </MudText>
 <p> Access levels are a template of permissions that can be applied to specific OU's for specific delegates.</p>
 
-    @if (CurrentAccessLevels != null)
+@if (CurrentAccessLevels != null)
+{
+    @foreach (AccessLevel ap in CurrentAccessLevels)
     {
-        @foreach (AccessLevel ap in CurrentAccessLevels)
-        {
 
-            <ShowAccessLevel Model="ap" />
-        }
+        <ShowAccessLevel Model="ap" />
     }
+}
 
-        <MudExpansionPanel Text="@AppLocalization["Add New Access Level"]">
+<MudExpansionPanel Text="@AppLocalization["Add New Access Level"]">
 
-                <EditAccessLevel LevelsChanged="Update" />
+    <EditAccessLevel LevelsChanged="Update" />
 
 
-        </MudExpansionPanel>
+</MudExpansionPanel>
 
 @code {
-    List<AccessLevel> CurrentAccessLevels=new();
+    List<AccessLevel> CurrentAccessLevels = new();
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
@@ -33,8 +33,8 @@
     {
         LoadingData = true;
         await InvokeAsync(StateHasChanged);
-
-        CurrentAccessLevels = await Context.AccessLevels.Where(al => al.DeletedAt == null).ToListAsync();
+        if (Context != null)
+            CurrentAccessLevels = await Context.AccessLevels.Where(al => al.DeletedAt == null).ToListAsync();
         LoadingData = false;
 
         await InvokeAsync(StateHasChanged);
