--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -31,7 +31,11 @@
                     <PropertyColumn Property="x => x.Username" />
                     <PropertyColumn Property="x => x.IpAddress" />
                     <PropertyColumn Property="x => x.Action" />
-                    <PropertyColumn Property="x => x.Target" />
+                    <TemplateColumn>
+                        <CellTemplate>
+                            <MudLink OnClick="@(()=>{Nav.NavigateTo("/search/"+context.Item.Target);})">@context.Item.Target</MudLink>
+                        </CellTemplate>
+                    </TemplateColumn>
                     <PropertyColumn Property="x => x.BeforeAction" />
                     <PropertyColumn Property="x => x.AfterAction" />
 
@@ -82,7 +86,8 @@
                     <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" />
                     <PropertyColumn Property="x => x.Username" />
                     <PropertyColumn Property="x => x.IpAddress" />
-                    <PropertyColumn Property="x => x.Action" />
+                    <PropertyColumn Property="x => x.Target" />
+
                     <PropertyColumn Property="x => x.Target" />
                     <PropertyColumn Property="x => x.BeforeAction" />
                     <PropertyColumn Property="x => x.AfterAction" />
@@ -105,7 +110,7 @@
 
             @code {
     IEnumerable<DateTime> allDates;
-    List<CommonAuditLog> auditEntries = new();
+    List<DirectoryEntryAuditLog> auditEntries = new();
     List<SystemAuditLog> systemAuditEntries = new();
     List<ChartSeries> LoginSeries = new();
     InterpolationOption _chartInterpolation = InterpolationOption.Straight;
@@ -120,11 +125,8 @@
         BaseUri = "/audit";
         using (var context = await DbFactory.CreateDbContextAsync())
         {
-            auditEntries = await context.LogonAuditLog.ToListAsync<CommonAuditLog>();
-            auditEntries.AddRange(context.UserAuditLog.ToList<CommonAuditLog>());
-            auditEntries.AddRange(context.GroupAuditLog.ToList<CommonAuditLog>());
-            auditEntries.AddRange(context.OUAuditLog.ToList<CommonAuditLog>());
-            auditEntries.AddRange(context.ComputerAuditLog.ToList<CommonAuditLog>());
+            auditEntries = await context.DirectoryEntryAuditLogs.ToListAsync<DirectoryEntryAuditLog>();
+            
 
             systemAuditEntries = await context.SystemAuditLog.ToListAsync();
 
