--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -54,6 +54,7 @@
 @using BLAZAM.Gui.Layouts;
 @using BLAZAM.Gui.UI.Settings;
 @using BLAZAM.Gui.UI.Chat
+@using BLAZAM.Gui.UI.Modals
 
 @using BLAZAM.Gui.UI.Groups
 @using BLAZAM.Gui.UI.Users.Fields
